--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,14 @@
   background-color: #948979;
 }
 
+.bg-default-background {
+  background-color: #a7b1c2;
+}
+
+.text-dark-color{
+  color: #222831;
+}
+
 .text-main-color {
   color: #dfd0b8;
 } 
